# uploadgram

./: README.md  config.env  pyproject.toml
uploadgram/: progress.py  shell.py  take_screen_shot.py  upload.py  uploadgram.py
