[tool.poetry]
name = "uploadgram"
version = "0.4.0"
description ="Upload files to Telegram upto 4 GiB, from the Terminal"
authors = ["Shrimadhav U K <uploADGRam@shrimadhavUK.me>"]
homepage = "https://github.com/SpEcHiDe/UploadGram"
repository = "https://github.com/SpEcHiDe/UploadGram"
keywords = ["telegram-upload", "telegram", "upload", "video", "audio"]
license = "AGPLv3"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
hachoir = "^3.3.0"
tqdm = "^4.66.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
isort = "^5.12.0"
black = "^24.0"
autopep8 = "^2.0.0"
autoflake = "^2.0.0"

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uploadgram = "uploadgram.shell:main"
